Add styling to body of page.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -22,3 +22,24 @@ h1{
   display: block;
   color: white;
 }
+
+h2{
+  font-family: Helvetica;
+  font-weight: bold;
+  font-size: 32px;
+}
+h3{
+  font-family: Helvetica;
+  font-size: 23px;
+  font-weight: bold;
+}
+
+p{
+  font-family: Helvetica;
+  font-size: 14px;
+}
+
+.origin{
+  color: white;
+  background-image: url("../images/the-flatiron-building.png")
+}
