Add photos and style.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -41,5 +41,13 @@ p{
 
 .origin{
   color: white;
-  background-image: url("../images/the-flatiron-building.png")
+  background-image: url("../images/the-flatiron-building.png");
+}
+
+.foot{
+  font-family: Helvetica;
+  font-size: 11px;
+  color: white;
+  background-color: dimgray;
+  text-align: left;
 }
